--- a/JS/modelo/index.html
+++ b/JS/modelo/index.html
@@ -28,20 +28,15 @@
                 <p>Obesidade Grau 3</p>
             </div><!--fim informações-->
         </div>
-        <form action="">
-            <label for="input-teste-1">Label Teste #1</label>
-            <input type="text" id="input-teste-1">
+        <form action="/" id="form" method="POST">
+            <label for="Peso">Peso</label>
+            <input type="text" id="peso" name="peso">
  
-            <label for="input-teste-2">Label Teste #2</label>
-            <input type="password" id="input-teste-2">
- 
-            <label for="input-teste-3">Label Teste #3</label>
-            <input type="email" id="input-teste-3">
- 
-            <label for="input-teste-4">Label Teste #4</label>
-            <input type="number" id="input-teste-4">
- 
+            <label for="Altura">Altura</label>
+            <input type="text" id="altura" name="altura">
             <button>Enviar</button>
+
+            <div id="resultado"></div>
         </form>
     </section>
     <script src="assets/js/main.js"></script>
